; ModuleID = '/home/carl/AnghaBench/php-src/ext/pdo/extr_pdo_stmt.c_pdo_stmt_iter_valid.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pdo/extr_pdo_stmt.c_pdo_stmt_iter_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.php_pdo_iterator = type { i32 }

@FAILURE = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @pdo_stmt_iter_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pdo_stmt_iter_valid(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.php_pdo_iterator*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.php_pdo_iterator*
  store %struct.php_pdo_iterator* %5, %struct.php_pdo_iterator** %3, align 8
  %6 = load %struct.php_pdo_iterator*, %struct.php_pdo_iterator** %3, align 8
  %7 = getelementptr inbounds %struct.php_pdo_iterator, %struct.php_pdo_iterator* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @Z_ISUNDEF(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @FAILURE, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @SUCCESS, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = phi i32 [ %12, %11 ], [ %14, %13 ]
  ret i32 %16
}

declare dso_local i64 @Z_ISUNDEF(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
